--- a/3.1 project/style.css
+++ b/3.1 project/style.css
@@ -1,48 +1,57 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  html {
-    font-size: 62.5%;
-  }
-  body {
-    font-family: "Goldman", cursive;
-    background-image: url(/3.1\ project/img/image.png);
-  }
-   
-  nav {
-    display: flex;
-    width: 100%;
-    padding: 2rem;
-    min-height: 10vh;
-    align-items: center;
-    flex-wrap: wrap;
-    margin: auto;
-    background: #00a8c7;
-    justify-content: space-between;
-  }
-  nav ul {
-    display: flex;
-    align-items: center;
-    list-style-type: none;
-  }
-  nav li {
-    font-size: 2.5rem;
-    padding: 0 4rem 0 4rem;
-  }
-  nav a {
-    color: white;
-    text-decoration: none;
-  }
-  nav img {
-    width: 5vw;
-  }
-   
-  h1{
-    font-size: 600%;
-  font-family: Arial, Helvetica, sans-serif;
-  } 
-  .title{
-    font-size: 47px;
-  }
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: #333;
+  color: white;
+  padding: 1em 0;
+  text-align: center;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline;
+  margin: 0 10px;
+}
+
+nav ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+main {
+  padding: 20px;
+}
+
+footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 1em 0;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+th, td {
+  padding: 10px;
+  text-align: left;
+}
+
