--- a/4.3/style.css
+++ b/4.3/style.css
@@ -1,38 +1,49 @@
-h1{
-    font-size: 24px;
-    color: rgb(64, 0, 255);
-    font-style: italic;
-    font-weight: bolder;
-}
-h2{
-    font-size: 20px;
-    color: #0000ff;
-    font-style: italic;
-
-}
-h3{
-    font-size: 16px;
-    color: teal;
-    font-style: italic;
-}
-p{
-    color: #4D4D4D  ;
-
-}
-.eersteparagraaf{
-    font-style: italic;
-}
-p{
-    color: #4D4D4D ;
-}
-a{
-    color: #8A2BE2;
-    text-decoration: none;
-}
-body {
-    font-family: "Goldman", cursive;
-    background: url(img/background.jpeg) no-repeat center center fixed;
-  background-size: cover;
-  color: white;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
-
+  html {
+    font-size: 62.5%;
+  }
+  body {
+    font-family: "Goldman", cursive;
+    background-image: url(img/background\ \(1\).png);
+    background-image: url(/img/abdelrruh.png);
+  }
+   
+  nav {
+    display: flex;
+    width: 100%;
+    padding: 2rem;
+    min-height: 10vh;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: auto;
+    background: #00a8c7;
+    justify-content: space-between;
+  }
+  nav ul {
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+  }
+  nav li {
+    font-size: 2.5rem;
+    padding: 0 4rem 0 4rem;
+  }
+  nav a {
+    color: white;
+    text-decoration: none;
+  }
+  nav img {
+    width: 5vw;
+  }
+   
+  h1{
+    color: white;
+  }
+   
+  .title{
+    font-size: 47px;
+  }
