--- a/3.1 project/style.css
+++ b/3.1 project/style.css
@@ -1,7 +1,11 @@
-body {
-  font-family: Arial, sans-serif;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
 }
 
 header {
@@ -35,8 +39,6 @@ footer {
   color: white;
   text-align: center;
   padding: 1em 0;
-  width: 100%;
-  bottom: 0;
 }
 
 table {
@@ -62,3 +64,8 @@ h2 {
   color: #333;
 }
 
+.container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
